--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -9,6 +9,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
+	<link rel="icon" type="image/png" href="source/iconoPestaña.png" />
+	
 	<link id="estilo1" rel="stylesheet" type="text/css" href="css/estilo1.css">
 
 	<script src="jscript/stylechange.js" type="text/javascript"></script>
@@ -16,11 +18,14 @@
 
 </head>
 
-<body onload="drawCucha()">
+<body onload="cargarEstilo()">
 	<div id="header">
 	  <h1>Arme su cucha aqui...</h1>
 	</div>
 
+	<!-- $('.js-grupo1').onclick(); -->
+	
+	
 	<div id="menu" class="row">
 		<div class="col-lg-6">
 			<div class="col-lg-6">
@@ -103,9 +108,9 @@
 		<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Estilo
 		<span class="caret"></span></button>
 			<ul class="dropdown-menu">
-			<li><a href="#" onclick="noStyle()">Estilo 1</a></li>
-			<li><a href="#">Estilo 2</a></li>
-			<li><a href="#" onclick="reStyle()">Sin Estilo</a></li>
+			<li><a href="#" onclick="reStyle('estilo1')">Estilo 1</a></li>
+			<li><a href="#" onclick="reStyle('estilo2')">Estilo 2</a></li>
+			<li><a href="#" onclick="noStyle()">Sin Estilo</a></li>
 			</ul>
 		</div>
 	</div>
