--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -12,13 +12,15 @@
 	<link rel="icon" type="image/png" href="source/iconoPestaña.png" />
 	
 	<link id="estilo1" rel="stylesheet" type="text/css" href="css/estilo1.css">
-
+	
 	<script src="jscript/stylechange.js" type="text/javascript"></script>
 	<script src="jscript/canvasdraw.js" type="text/javascript"></script>
+	<script src="jscript/pageInit.js" type="text/javascript"></script>
+
 
 </head>
 
-<body onload="cargarEstilo()">
+<body onload="pageInit()">
 	<div id="header">
 	  <h1>Arme su cucha aqui...</h1>
 	</div>
