--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -8,16 +8,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+
 	<link rel="icon" type="image/png" href="source/iconoPestaña.png" />
 	
 	<link id="estilo1" rel="stylesheet" type="text/css" href="css/estilo1.css">
-	
+
 	<script src="jscript/stylechange.js" type="text/javascript"></script>
 	<script src="jscript/canvasdraw.js" type="text/javascript"></script>
 	<script src="jscript/pageInit.js" type="text/javascript"></script>
-
-
 </head>
 
 <body onload="pageInit()">
@@ -25,22 +23,21 @@
 	  <h1>Arme su cucha aqui...</h1>
 	</div>
 
-	<!-- $('.js-grupo1').onclick(); -->
-	
-	
 	<div id="menu" class="row">
 		<div class="col-lg-6">
 			<div class="col-lg-6">
 				<h3>Tamaño</h3>
-				<input type="radio" name="group1" value="Chica"> Chica<br>
-				<input type="radio" name="group1" value="Mediana" checked> Mediana<br>
-				<input type="radio" name="group1" value="Grande"> Grande<br>
+				<input type="radio" name="tamaño" value="chica"> Chica<br>
+				<input type="radio" name="tamaño" value="mediana" checked> Mediana<br>
+				<input type="radio" name="tamaño" value="grande"> Grande<br>
+				<br>
 			</div>
 			<div class="col-lg-6">
 				<h3>Ventana</h3>
-				<input type="radio" name="group2" value="Redonda"> Redonda<br>
-				<input type="radio" name="group2" value="Cuadrada" checked> Cuadrada<br>
-				<input type="radio" name="group2" value="Ninguna"> Ninguna<br>
+				<input type="radio" name="ventana" value="redonda"> Redonda<br>
+				<input type="radio" name="ventana" value="cuadrada" checked> Cuadrada<br>
+				<input type="radio" name="ventana" value="ninguna"> Ninguna<br>
+				<br>
 			</div>
 
 			<ul id="tipoPestaña" class="nav nav-tabs centered">
@@ -52,22 +49,22 @@
 				<div id="paredes" class="tab-pane fade in active">
 					<div class="col-lg-6">
 						<h3>Material</h3>
-							<input type="radio" name="group3" value="Chapa"> Chapa<br>
-							<input type="radio" name="group3" value="Madera" checked> Madera<br>
-							<input type="radio" name="group3" value="Fibra de vidrio"> Fibra de vidrio<br>
-							<input type="radio" name="group3" value="Plastico"> Plastico<br>
+							<input type="radio" name="materialP" value="chapa"> Chapa<br>
+							<input type="radio" name="materialP" value="madera" checked> Madera<br>
+							<input type="radio" name="materialP" value="fibra de vidrio"> Fibra de vidrio<br>
+							<input type="radio" name="materialP" value="plastico"> Plastico<br>
 							<br>
 						<h3>Estilo</h3>
-							<input type="radio" name="group4" value="Rayado"> Rayado<br>
-							<input type="radio" name="group4" value="Plano" checked> Plano<br>
-							<input type="radio" name="group4" value="Lunares"> Lunares<br>
+							<input type="radio" name="estiloP" value="rayado"> Rayado<br>
+							<input type="radio" name="estiloP" value="plano" checked> Plano<br>
+							<input type="radio" name="estiloP" value="lunares"> Lunares<br>
 							<br>
 					</div>
 
 					<!--paleta colores-->
 					<div class="col-lg-6">
 						<h3>Color</h3>
-						 <input type="color" name="favcolor" value="#0000ff">
+						 <input id="colorPared" type="color" name="favcolor" value="#0000ff" onchange="reDraw()">
 					</div>
 				</div>
 
@@ -75,27 +72,26 @@
 					<!-- radiobuttons dentro de pestaña techo-->
 					<div class="col-lg-6">
 						<h3>Material</h3>
-							<input type="radio" name="group5" value="Chapa"> Chapa<br>
-							<input type="radio" name="group5" value="Madera" checked> Madera<br>
-							<input type="radio" name="group5" value="Fibra de vidrio"> Fibra de vidrio<br>
-							<input type="radio" name="group5" value="Plastico"> Plastico<br>
+							<input type="radio" name="materialT" value="chapa"> Chapa<br>
+							<input type="radio" name="materialT" value="madera" checked> Madera<br>
+							<input type="radio" name="materialT" value="fibra de vidrio"> Fibra de vidrio<br>
+							<input type="radio" name="materialT" value="plastico"> Plastico<br>
 							<br>
 						<h3>Estilo</h3>
-							<input type="radio" name="group7" value="Rayado"> Rayado<br>
-							<input type="radio" name="group7" value="Plano" checked> Plano<br>
-							<input type="radio" name="group7" value="Lunares" checked> Lunares<br>
+							<input type="radio" name="estiloT" value="rayado"> Rayado<br>
+							<input type="radio" name="estiloT" value="plano" checked> Plano<br>
+							<input type="radio" name="estiloT" value="lunares"> Lunares<br>
 							<br>
 						
 					</div>
 					<!--paleta colores-->
 					<div class="col-lg-6">
 						<h3>Forma</h3>
-							<input type="radio" name="group6" value="Un agua"> Un agua<br>
-							<input type="radio" name="group6" value="Dos aguas" checked> Dos aguas<br>
-							<input type="radio" name="group6" value="Dos aguas extendida" checked> Dos aguas extendida<br>
+							<input type="radio" name="forma" value="un agua" checked> Un agua<br>
+							<input type="radio" name="forma" value="dos aguas"> Dos aguas<br>
 							<br>
 						<h3>Color</h3>
-						 <input type="color" name="favcolor" value="#ff0000">
+						 <input  id="colorTecho" type="color" name="favcolor" value="#ff0000" onchange="reDraw()">
 					</div>
 				</div>
 			</div>
@@ -118,6 +114,11 @@
 			</ul>
 		</div>
 	</div>
+
+
+	<script>
+		$('input[type=radio]').attr("onclick","reDraw()");
+	</script>
 
 </body>
 </html>
