--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -13,6 +13,7 @@
 	
 	<link id="estilo1" rel="stylesheet" type="text/css" href="css/estilo1.css">
 
+	<script src="jscript/manageJson.js" type="text/javascript"></script>
 	<script src="jscript/stylechange.js" type="text/javascript"></script>
 	<script src="jscript/canvasdraw.js" type="text/javascript"></script>
 	<script src="jscript/pageInit.js" type="text/javascript"></script>
@@ -91,7 +92,7 @@
 							<input type="radio" name="forma" value="dos aguas"> Dos aguas<br>
 							<br>
 						<h3>Color</h3>
-						 <input  id="colorTecho" type="color" name="favcolor" value="#ff0000" onchange="reDraw()">
+						 <input  id="colorTecho" type="color" name="favcolor" value="#ff0000" onchange="btnFunctions(id,value)">
 					</div>
 				</div>
 			</div>
@@ -117,8 +118,9 @@
 
 
 	<script>
-		$('input[type=radio]').attr("onclick","reDraw()");
+		$('input[type=radio]').attr("onclick","btnFunctions(name,value)");
 	</script>
+	
 
-</body>
+	</body>
 </html>
