--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -18,6 +18,7 @@
 	<script src="jscript/stylechange.js" type="text/javascript"></script>
 	<script src="jscript/canvasdraw.js" type="text/javascript"></script>
 	<script src="jscript/pageInit.js" type="text/javascript"></script>
+	<script src="jscript/defaultModels.js" type="text/javascript"></script>
 </head>
 
 <body onload="pageInit()">
@@ -66,14 +67,14 @@
 						<div class="col-lg-6 navUnit">
 							<h3>Estilo</h3>
 								<input class="2colores" type="radio" name="estilo" value="rayado" title="200"> Rayado<br>
-								<input class="1color" type="radio" name="estilo" value="plano" title="200" checked> Plano<br>
+								<input class="1color" type="radio" name="estilo" value="plano" title="150" checked> Plano<br>
 								<br>
 						</div>
 
 						<div class="col-lg-6 navUnit">
 							<h3>Color</h3>
-								<input id="colorPared1" type="color" name="favcolor" value="#0000ff" title="100" onchange="reDraw()">
-								<input id="colorPared2" type="color" name="favcolor" value="#0000ff" title="200" onchange="reDraw()">
+								<input id="colorPared1" type="color" name="favcolor" value="#0000ff" title="100" onchange="reDraw()"><br>
+								<br><input id="colorPared2" type="color" name="favcolor" value="#0000ff" title="200" onchange="reDraw()">
 						</div>
 					</div>
 
@@ -95,7 +96,18 @@
 		</div>
 
 		<div class="col-lg-6">
-			<canvas id="canvas" width="400" height="400" style="background-color:#BBBBBB"></canvas>
+			<div class="col-lg-8">
+				<canvas id="canvas" width="400" height="400" style="background-color:#BBBBBB"></canvas>
+			</div>
+			<div class="col-lg-4">
+				<h4>Modelos Predeterminados</h4>
+				<div class="btn-group-vertical" role="group">
+					<button type="button" class="btn1" onclick="cheapModel()" >Economica</button>
+					<button type="button" class="btn1" onclick="classicModel()">Clasica</button>
+					<button type="button" class="btn1" onclick="ejecutiveModel()">Ejecutiva</button>
+				</div>
+			</div>
+			
 		</div>
 
 		<p>Costo Total <input class="textBox" type="text" id="total" readonly="true" value=0> <p>
