Agregado del link quienes somos en el footer.

--- a/Proyecto1/index.html
+++ b/Proyecto1/index.html
@@ -116,6 +116,9 @@
 	</div>
 
 	<footer>
+		<!--<a  onclick="footerInformation()" > ¿Quienes somos? </a><br />-->
+		<a class="linkFooter" href="" onclick="footerInformation()">Quienes somos</a>
+	
 		<div class="dropup">
 		<button class="btn" type="button" data-toggle="dropdown">Estilo
 		<span class="caret"></span></button>
